--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -8,6 +8,7 @@
   <div>Message :
     <textarea></textarea>
   </div>
+  <button (click)="setNext()">Next</button>
   <div *ngFor="let item of myString">
     {{item.title}}
   </div>
